# Full-Text-Search-Engine

./: README.md  UBUNTU_DEPLOYMENT.md
client/: .env  .env.example  package.json
client/public/: .htaccess  index.html
client/src/: App.js
client/src/components/: AdminPanel.js  LiveResultsDialog.js  Login.js  SearchInterface.js  SearchResultsOverlay.js  SearchResultsSidebar.js  TaskManager.js
client/src/contexts/: AuthContext.js
client/src/hooks/: useMultiTaskSubscription.js  usePaginatedSearch.js  useTaskPersistence.js  useWebSocket.js
client/src/utils/: errorHandler.js  taskStateManager.js
server/: .env  .gitignore  build-rust-clean.bat  build.sh  env.example  index.js  package.json
server/middleware/: auth.js  errorHandler.js
server/routes/: admin.js  auth.js  search.js  tasks.js
server/rust-search-engine/: Cargo.toml
server/rust-search-engine/src/: lib.rs  main.rs
server/services/: asyncSearchService.js  backgroundTasks.js  websocketService.js
server/utils/: resultCacheManager.js  rustEngine.js  taskManager.js
